# billiboba-test-bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  di.py  keyboards.py  main.py  middlewares.py
app/dialogs/: main_dialog.py
app/handlers/: callbacks.py  commands.py  messages.py
app/services/: chatgpt.py
