[project]
name = "billiboba-test-bot"
version = "0.1.0"
description = "биллибоба"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.4",
    "aiogram-dialog>=2.3",
    "dishka>=1.2",
    "openai>=1.43",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pymongo>=4.15.4",
    "python-dotenv>=1.0",
]